--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/Admin\ Pages/header.jsp=UTF-8
-encoding//src/main/webapp/Client\ Pages/ContactUs.jsp=UTF-8
+encoding//src/main/webapp/Client_Pages/ContactUs.jsp=UTF-8
 encoding/<project>=UTF-8
